# navis

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  build.sh  conanfile.txt  default.nix  meson.build  pale-noel.cc  pale_noel.cc  shell.nix
include/: pale-noel.hh  pale_noel.h
src/: pg.cc  tcp-server.cc  tcp.cc  udp.cc
tests/: main.test.cc  pale_noel.test.cc  test.frag  test.vert
